Recommendations endpoint and viewed articles endpoint implemented, not tested