@@ -1,41 +1,37 @@
 package com.escom.papelio.service;
 
+import com.escom.papelio.client.SemanticScholarApiClient;
 import com.escom.papelio.dto.ArticleDTO;
+import com.escom.papelio.dto.RecommendationRequestDTO;
 import com.escom.papelio.dto.SearchRequestDTO;
 import com.escom.papelio.dto.SearchResponseDTO;
-import lombok.Data;
+import com.escom.papelio.mapper.SemanticScholarMapper;
+import com.escom.papelio.model.SemanticScholarResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.http.HttpHeaders;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClient;
-import org.springframework.web.reactive.function.client.WebClientResponseException;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.Random;
-import java.util.function.Supplier;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class SemanticScholarService implements ArticleService {
 
-    private static final int MAX_RETRIES = 10;
-    private final WebClient webClient;
-    private final Random random = new Random();
-    @Value("${api.semantic-scholar.base-url:https://api.semanticscholar.org/graph/v1}")
-    private String apiBaseUrl;
-
-    @Value("${api.semantic-scholar.key:#{null}}")
-    private String apiKey;
+    private final SemanticScholarApiClient apiClient;
+    private final SemanticScholarMapper mapper;
+    
+    private static final int TARGET_RECOMMENDATIONS = 20;
+    private static final String RECOMMENDATION_FIELDS = "title,abstract,authors,venue,year,citationCount,url,externalIds";
 
     private static void getInfo(SemanticScholarResponse response) {
-        log.info("Received {} results out of total {}", response.getData() != null ? response.getData().size() : 0, response.getTotal());
+        log.info("Received {} results out of total {}", 
+                response.getData() != null ? response.getData().size() : 0, 
+                response.getTotal());
     }
 
     @Override
@@ -43,12 +39,13 @@ public class SemanticScholarService implements ArticleService {
     public SearchResponseDTO searchArticles(SearchRequestDTO searchRequest) {
         log.info("Performing basic search with query: {}", searchRequest.getQuery());
 
-        String uri = UriComponentsBuilder.fromUriString(apiBaseUrl + "/paper/search/bulk").queryParam("query", searchRequest.getQuery()).queryParam("offset", searchRequest.getPage() * searchRequest.getSize()).queryParam("limit", searchRequest.getSize()).queryParam("fields", "title,abstract,authors,venue,year,citationCount,url,externalIds").build().toUriString();
-
-        log.debug("Calling Semantic Scholar API with URL: {}", uri);
-
         try {
-            var response = executeWithRetry(() -> webClient.get().uri(uri).headers(this::setHeaders).retrieve().bodyToMono(SemanticScholarResponse.class).block());
+            var response = apiClient.searchPapers(
+                    searchRequest.getQuery(),
+                    searchRequest.getPage() * searchRequest.getSize(),
+                    searchRequest.getSize(),
+                    "title,abstract,authors,venue,year,citationCount,url,externalIds"
+            );
 
             if (response == null) {
                 log.warn("Received null response from Semantic Scholar API");
@@ -60,12 +57,20 @@ public class SemanticScholarService implements ArticleService {
 
             List<ArticleDTO> articles = new ArrayList<>();
             if (response.getData() != null) {
-                articles = response.getData().stream().map(this::mapToArticleDTO).toList();
+                articles = response.getData().stream()
+                        .map(mapper::mapToArticleDTO)
+                        .collect(Collectors.toList());
             }
 
-            return new SearchResponseDTO(articles, response.getTotal() != null ? response.getTotal() : 0, searchRequest.getPage(), calculateTotalPages(response.getTotal(), searchRequest.getSize()), searchRequest.getQuery());
+            return new SearchResponseDTO(
+                    articles,
+                    response.getTotal() != null ? response.getTotal() : 0,
+                    searchRequest.getPage(),
+                    calculateTotalPages(response.getTotal(), searchRequest.getSize()),
+                    searchRequest.getQuery()
+            );
         } catch (Exception e) {
-            log.error("Error searching articles after retries: {}", e.getMessage(), e);
+            log.error("Error searching articles: {}", e.getMessage(), e);
             return createEmptyResponse(searchRequest);
         }
     }
@@ -75,7 +80,11 @@ public class SemanticScholarService implements ArticleService {
     public SearchResponseDTO advancedSearch(SearchRequestDTO searchRequest) {
         log.info("Performing advanced search with filters: {}", searchRequest);
 
-        UriComponentsBuilder uriBuilder = UriComponentsBuilder.fromUriString(apiBaseUrl + "/paper/search").queryParam("query", searchRequest.getQuery()).queryParam("offset", searchRequest.getPage() * searchRequest.getSize()).queryParam("limit", searchRequest.getSize()).queryParam("fields", "title,abstract,authors,venue,year,citationCount,url,externalIds");
+        UriComponentsBuilder uriBuilder = UriComponentsBuilder.fromUriString("/paper/search")
+                .queryParam("query", searchRequest.getQuery())
+                .queryParam("offset", searchRequest.getPage() * searchRequest.getSize())
+                .queryParam("limit", searchRequest.getSize())
+                .queryParam("fields", "title,abstract,authors,venue,year,citationCount,url,externalIds");
 
         // Add date range filter if provided
         if (searchRequest.getFromDate() != null) {
@@ -91,11 +100,8 @@ public class SemanticScholarService implements ArticleService {
             uriBuilder.queryParam("venue", searchRequest.getJournal());
         }
 
-        String uri = uriBuilder.build().toUriString();
-        log.debug("Calling Semantic Scholar API with URL: {}", uri);
-
         try {
-            var response = executeWithRetry(() -> webClient.get().uri(uri).headers(this::setHeaders).retrieve().bodyToMono(SemanticScholarResponse.class).block());
+            var response = apiClient.advancedSearch(uriBuilder);
 
             if (response == null) {
                 log.warn("Received null response from Semantic Scholar API");
@@ -107,14 +113,23 @@ public class SemanticScholarService implements ArticleService {
 
             List<ArticleDTO> articles = new ArrayList<>();
             if (response.getData() != null) {
-                articles = response.getData().stream().map(this::mapToArticleDTO)
+                articles = response.getData().stream()
+                        .map(mapper::mapToArticleDTO)
                         // Apply client-side filtering for more specific filters not supported by API
-                        .filter(article -> filterByDocumentType(article, searchRequest.getDocumentType())).filter(article -> filterByLanguage(article, searchRequest.getLanguage())).toList();
+                        .filter(article -> mapper.filterByDocumentType(article, searchRequest.getDocumentType()))
+                        .filter(article -> mapper.filterByLanguage(article, searchRequest.getLanguage()))
+                        .collect(Collectors.toList());
             }
 
-            return new SearchResponseDTO(articles, response.getTotal() != null ? response.getTotal() : 0, searchRequest.getPage(), calculateTotalPages(response.getTotal(), searchRequest.getSize()), searchRequest.getQuery());
+            return new SearchResponseDTO(
+                    articles,
+                    response.getTotal() != null ? response.getTotal() : 0,
+                    searchRequest.getPage(),
+                    calculateTotalPages(response.getTotal(), searchRequest.getSize()),
+                    searchRequest.getQuery()
+            );
         } catch (Exception e) {
-            log.error("Error performing advanced search after retries: {}", e.getMessage(), e);
+            log.error("Error performing advanced search: {}", e.getMessage(), e);
             return createEmptyResponse(searchRequest);
         }
     }
@@ -124,121 +139,97 @@ public class SemanticScholarService implements ArticleService {
     public Optional<ArticleDTO> getArticleById(String id) {
         log.info("Fetching article details for ID: {}", id);
 
-        String uri = UriComponentsBuilder.fromUriString(apiBaseUrl + "/paper/" + id).queryParam("fields", "title,abstract,authors,venue,year,citationCount,url,externalIds,references").build().toUriString();
-        log.debug("Calling Semantic Scholar API with URL: {}", uri);
-
         try {
-            var response = executeWithRetry(() -> webClient.get().uri(uri).headers(this::setHeaders).retrieve().bodyToMono(SemanticScholarPaper.class).block());
+            var paper = apiClient.getPaperById(id, "title,abstract,authors,venue,year,citationCount,url,externalIds,references");
 
-            if (response == null) {
+            if (paper == null) {
                 log.warn("Received null response from Semantic Scholar API for ID: {}", id);
                 return Optional.empty();
             }
 
-            log.debug("API Response for article {}: {}", id, response);
-            return Optional.of(mapToArticleDTO(response));
+            log.debug("API Response for article {}: {}", id, paper);
+            return Optional.of(mapper.mapToArticleDTO(paper));
         } catch (Exception e) {
-            log.error("Error fetching article details after retries: {}", e.getMessage(), e);
+            log.error("Error fetching article details: {}", e.getMessage(), e);
             return Optional.empty();
         }
     }
 
-    /**
-     * Executes a function with retry logic for handling 429 Too Many Requests errors
-     * Will retry up to MAX_RETRIES times with a random delay between 0-1 second
-     *
-     * @param supplier The function to execute that might throw a 429 exception
-     * @param <T>      The return type of the function
-     * @return The result of the function execution
-     * @throws Exception If the function still fails after all retries
-     */
-    private <T> T executeWithRetry(Supplier<T> supplier) throws Exception {
-        int attempts = 0;
-        Exception lastException = null;
-
-        while (attempts < MAX_RETRIES) {
+    @Cacheable(value = "recommendationsCache", key = "#request.paperIds.toString()")
+    public SearchResponseDTO getRecommendations(RecommendationRequestDTO request) {
+        log.info("Getting recommendations for {} paper(s)", request.getPaperIds().size());
+        
+        if (request.getPaperIds() == null || request.getPaperIds().isEmpty()) {
+            log.warn("Empty paper IDs list provided for recommendations");
+            return new SearchResponseDTO(new ArrayList<>(), 0, 0, 0, "recommendations");
+        }
+        
+        // Calculate how many recommendations to request per paper
+        int paperCount = request.getPaperIds().size();
+        int limitPerPaper = calculateLimitPerPaper(paperCount);
+        
+        log.info("Requesting {} recommendations per paper", limitPerPaper);
+        
+        // Use a map to track unique recommendations by ID
+        Map<String, ArticleDTO> uniqueRecommendations = new ConcurrentHashMap<>();
+        
+        // Process each paper ID to get recommendations
+        for (String paperId : request.getPaperIds()) {
             try {
-                return supplier.get();
-            } catch (WebClientResponseException e) {
-                if (e.getStatusCode().value() == 429) {
-                    attempts++;
-                    lastException = e;
-
-                    // Calculate random delay between 0-1000ms
-                    long delayMillis = random.nextInt(1000);
-                    log.warn("Received 429 Too Many Requests, retry attempt {}/{} after {}ms delay", attempts, MAX_RETRIES, delayMillis);
-
-                    try {
-                        Thread.sleep(delayMillis);
-                    } catch (InterruptedException ie) {
-                        Thread.currentThread().interrupt();
-                        throw new RuntimeException("Interrupted during retry delay", ie);
-                    }
-                } else {
-                    throw e;
+                var response = apiClient.getRecommendationsForPaper(
+                        paperId, 
+                        limitPerPaper, 
+                        RECOMMENDATION_FIELDS
+                );
+                
+                if (response == null || response.getData() == null) {
+                    log.warn("No recommendations found for paper ID: {}", paperId);
+                    continue;
                 }
+                
+                // Add all recommendations to the unique map
+                response.getData().stream()
+                        .map(mapper::mapToArticleDTO)
+                        .forEach(article -> uniqueRecommendations.put(article.getId(), article));
+                
+                // If we already have enough recommendations, break early
+                if (uniqueRecommendations.size() >= TARGET_RECOMMENDATIONS) {
+                    break;
+                }
+            } catch (Exception e) {
+                log.error("Error fetching recommendations for paper {}: {}", paperId, e.getMessage(), e);
             }
         }
-
-        log.error("Failed after {} retry attempts", MAX_RETRIES);
-        throw lastException;
-
-    }
-
-    private void setHeaders(HttpHeaders headers) {
-        if (apiKey != null && !apiKey.isEmpty()) {
-            headers.set("x-api-key", apiKey);
+        
+        // Convert the map to a list, limiting to target count
+        List<ArticleDTO> recommendations = new ArrayList<>(uniqueRecommendations.values());
+        if (recommendations.size() > TARGET_RECOMMENDATIONS) {
+            recommendations = recommendations.subList(0, TARGET_RECOMMENDATIONS);
         }
+        
+        log.info("Returning {} recommendations", recommendations.size());
+        
+        return new SearchResponseDTO(
+                recommendations,
+                recommendations.size(),
+                0,
+                1,
+                "recommendations"
+        );
     }
-
-    private ArticleDTO mapToArticleDTO(SemanticScholarPaper paper) {
-        log.debug("Mapping paper to ArticleDTO: {}", paper.getPaperId());
-
-        ArticleDTO dto = new ArticleDTO();
-        dto.setId(paper.getPaperId());
-        dto.setTitle(paper.getTitle());
-        dto.setAbstract_(paper.getAbstract_());
-
-        // Set DOI if available
-        if (paper.getExternalIds() != null && paper.getExternalIds().getDoi() != null) {
-            dto.setDoi(paper.getExternalIds().getDoi());
-        }
-
-        // Extract authors
-        if (paper.getAuthors() != null) {
-            dto.setAuthors(paper.getAuthors().stream().map(Author::getName).toList());
+    
+    private int calculateLimitPerPaper(int paperCount) {
+        // Adjust the limit per paper based on the count
+        if (paperCount <= 3) {
+            // Few papers, get more recommendations per paper
+            return TARGET_RECOMMENDATIONS / paperCount;
+        } else if (paperCount <= 10) {
+            // Medium number of papers
+            return Math.max(3, TARGET_RECOMMENDATIONS / paperCount);
         } else {
-            dto.setAuthors(new ArrayList<>());
+            // Many papers, get fewer recommendations per paper
+            return Math.max(1, Math.min(3, TARGET_RECOMMENDATIONS / paperCount));
         }
-
-        dto.setJournal(paper.getVenue());
-
-        // Set publication date if year is available
-        if (paper.getYear() != null) {
-            // Default to January 1st of the publication year
-            dto.setPublicationDate(java.time.LocalDate.of(paper.getYear(), 1, 1));
-        }
-
-        dto.setCitationCount(paper.getCitationCount());
-        dto.setUrl(paper.getUrl());
-
-        return dto;
-    }
-
-    private boolean filterByDocumentType(ArticleDTO article, String documentType) {
-        if (documentType == null || documentType.isEmpty()) {
-            return true;
-        }
-        // Simple implementation - in real world would need proper logic
-        return documentType.equalsIgnoreCase(article.getDocumentType());
-    }
-
-    private boolean filterByLanguage(ArticleDTO article, String language) {
-        if (language == null || language.isEmpty()) {
-            return true;
-        }
-        // Simple implementation - in real world would need proper logic
-        return language.equalsIgnoreCase(article.getLanguage());
     }
 
     private int calculateTotalPages(Long total, int size) {
@@ -250,39 +241,5 @@ public class SemanticScholarService implements ArticleService {
 
     private SearchResponseDTO createEmptyResponse(SearchRequestDTO request) {
         return new SearchResponseDTO(new ArrayList<>(), 0, request.getPage(), 0, request.getQuery());
-    }
-
-    // Inner classes for API responses
-
-    @Data
-    private static class SemanticScholarResponse {
-        private Long total;
-        private List<SemanticScholarPaper> data;
-    }
-
-    @Data
-    private static class SemanticScholarPaper {
-        private String paperId;
-        private String title;
-        private String abstract_;
-        private List<Author> authors;
-        private String venue;
-        private Integer year;
-        private Integer citationCount;
-        private String url;
-        private ExternalIds externalIds;
-    }
-
-    @Data
-    private static class Author {
-        private String authorId;
-        private String name;
-    }
-
-    @Data
-    private static class ExternalIds {
-        private String doi;
-        private String arxiv;
-        private String pubmed;
     }
 }
